--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -267,35 +267,35 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" rowHeight="96" id="v0M-22-Pxv" customClass="CustomTableCellView" customModule="SalesEdge" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="96"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" rowHeight="76" id="v0M-22-Pxv" customClass="CustomTableCellView" customModule="SalesEdge" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="76"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="v0M-22-Pxv" id="eQZ-Fz-PBO">
-                                    <rect key="frame" x="0.0" y="0.0" width="341" height="95.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="341" height="75.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="img" translatesAutoresizingMaskIntoConstraints="NO" id="bbr-MQ-yMd">
-                                            <rect key="frame" x="16" y="8" width="80" height="80"/>
+                                            <rect key="frame" x="16" y="8" width="60" height="60"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="80" id="j57-Ae-F9a"/>
-                                                <constraint firstAttribute="height" constant="80" id="wbI-tB-N0B"/>
+                                                <constraint firstAttribute="width" constant="60" id="j57-Ae-F9a"/>
+                                                <constraint firstAttribute="height" constant="60" id="wbI-tB-N0B"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="timestamp" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FDT-dz-560">
-                                            <rect key="frame" x="291.5" y="8" width="33.5" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <rect key="frame" x="320" y="8" width="21" height="12"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" restorationIdentifier="title" text="prod" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4pj-r6-dP0">
-                                            <rect key="frame" x="104" y="8" width="179" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <rect key="frame" x="84" y="20" width="227.5" height="16"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" restorationIdentifier="subtitle" text="spec" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ckV-Qb-vlB">
-                                            <rect key="frame" x="104" y="37" width="237" height="56"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <rect key="frame" x="84" y="44" width="257" height="29"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -303,14 +303,14 @@
                                     <constraints>
                                         <constraint firstItem="ckV-Qb-vlB" firstAttribute="bottom" secondItem="eQZ-Fz-PBO" secondAttribute="bottomMargin" constant="8" id="5wC-Sf-nui"/>
                                         <constraint firstItem="ckV-Qb-vlB" firstAttribute="trailing" secondItem="eQZ-Fz-PBO" secondAttribute="trailingMargin" constant="8" id="9aX-SC-YSm"/>
-                                        <constraint firstItem="4pj-r6-dP0" firstAttribute="top" secondItem="eQZ-Fz-PBO" secondAttribute="top" constant="8" id="Bde-Rb-5vq"/>
                                         <constraint firstItem="ckV-Qb-vlB" firstAttribute="top" secondItem="4pj-r6-dP0" secondAttribute="bottom" constant="8" id="JXj-Qx-RUx"/>
-                                        <constraint firstAttribute="trailing" secondItem="FDT-dz-560" secondAttribute="trailing" constant="16" id="Nkz-HN-GIA"/>
+                                        <constraint firstAttribute="trailing" secondItem="FDT-dz-560" secondAttribute="trailing" id="Nkz-HN-GIA"/>
                                         <constraint firstItem="4pj-r6-dP0" firstAttribute="leading" secondItem="bbr-MQ-yMd" secondAttribute="trailing" constant="8" id="Rqj-Nz-eLP"/>
                                         <constraint firstItem="FDT-dz-560" firstAttribute="top" secondItem="eQZ-Fz-PBO" secondAttribute="top" constant="8" id="bFd-UA-frI"/>
                                         <constraint firstItem="bbr-MQ-yMd" firstAttribute="leading" secondItem="eQZ-Fz-PBO" secondAttribute="leading" constant="16" id="dQ6-i8-CmR"/>
                                         <constraint firstAttribute="bottom" secondItem="bbr-MQ-yMd" secondAttribute="bottom" constant="8" id="lzx-g1-peN"/>
                                         <constraint firstItem="ckV-Qb-vlB" firstAttribute="leading" secondItem="bbr-MQ-yMd" secondAttribute="trailing" constant="8" id="nzP-7O-nKF"/>
+                                        <constraint firstItem="4pj-r6-dP0" firstAttribute="top" secondItem="FDT-dz-560" secondAttribute="bottom" id="vdG-AY-ExX"/>
                                         <constraint firstItem="FDT-dz-560" firstAttribute="leading" secondItem="4pj-r6-dP0" secondAttribute="trailing" constant="8.5" id="vk9-1T-xx8"/>
                                         <constraint firstItem="bbr-MQ-yMd" firstAttribute="top" secondItem="eQZ-Fz-PBO" secondAttribute="top" constant="8" id="xlx-lv-Umf"/>
                                     </constraints>
@@ -328,7 +328,16 @@
                             <outlet property="delegate" destination="I37-iq-pXz" id="qcZ-6M-D3P"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Product" id="sUh-Qu-1T7"/>
+                    <navigationItem key="navigationItem" title="Product" id="sUh-Qu-1T7">
+                        <rightBarButtonItems>
+                            <barButtonItem title="Download" image="ic_more_horiz" id="l5J-fB-EuO">
+                                <connections>
+                                    <action selector="onMoreClick:" destination="I37-iq-pXz" id="XIh-vT-Z5h"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="New" id="0a0-w7-kKa"/>
+                        </rightBarButtonItems>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fh5-gR-hdO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
