--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -241,11 +241,11 @@
             </objects>
             <point key="canvasLocation" x="634" y="447"/>
         </scene>
-        <!--Product-->
+        <!--Show Room-->
         <scene sceneID="dTO-Ms-2BW">
             <objects>
                 <navigationController id="36q-eX-WSN" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Product" image="ic_border_all" id="ri1-In-hnw"/>
+                    <tabBarItem key="tabBarItem" title="Show Room" image="ic_border_all" id="ri1-In-hnw"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="k24-Hf-8Qg">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -328,15 +328,12 @@
                             <outlet property="delegate" destination="I37-iq-pXz" id="qcZ-6M-D3P"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Product" id="sUh-Qu-1T7">
-                        <rightBarButtonItems>
-                            <barButtonItem title="Download" image="ic_more_horiz" id="l5J-fB-EuO">
-                                <connections>
-                                    <action selector="onMoreClick:" destination="I37-iq-pXz" id="XIh-vT-Z5h"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem title="New" id="0a0-w7-kKa"/>
-                        </rightBarButtonItems>
+                    <navigationItem key="navigationItem" title="Show Room" id="sUh-Qu-1T7">
+                        <barButtonItem key="rightBarButtonItem" title="Download" image="ic_more_horiz" id="l5J-fB-EuO">
+                            <connections>
+                                <action selector="onMoreClick:" destination="I37-iq-pXz" id="XIh-vT-Z5h"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fh5-gR-hdO" userLabel="First Responder" sceneMemberID="firstResponder"/>
