--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -12,27 +12,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--My-->
-        <scene sceneID="KbD-QW-APG">
-            <objects>
-                <navigationController id="ygn-HJ-6jG" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="My" image="ic_account_box" id="Cv5-qc-Cnc"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e34-v1-RTW">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.027450980390000001" green="0.72549019609999998" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <textAttributes key="titleTextAttributes">
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </textAttributes>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="2Ad-aW-YsJ" kind="relationship" relationship="rootViewController" id="DQZ-WA-nb7"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="coJ-te-5S9" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="532" y="-1077"/>
-        </scene>
         <!--Pager Item View Controller-->
         <scene sceneID="nqJ-4Z-pkF">
             <objects>
@@ -86,7 +65,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KNx-TL-iOi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="532" y="-322"/>
+            <point key="canvasLocation" x="532" y="421"/>
         </scene>
         <!--Sales Edge-->
         <scene sceneID="hNz-n2-bh7">
@@ -220,7 +199,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1443.5" y="-331.5"/>
+            <point key="canvasLocation" x="1282" y="421"/>
         </scene>
         <!--PA-->
         <scene sceneID="wg7-f3-ORb">
@@ -252,7 +231,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="532" y="970"/>
+            <point key="canvasLocation" x="532" y="1146"/>
         </scene>
         <!--Show Room-->
         <scene sceneID="dTO-Ms-2BW">
@@ -269,7 +248,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vq6-tq-OvL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1749" y="597"/>
+            <point key="canvasLocation" x="532" y="-275"/>
         </scene>
         <!--Product-->
         <scene sceneID="gFp-Mg-oc4">
@@ -351,7 +330,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fh5-gR-hdO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2740" y="593.25337331334333"/>
+            <point key="canvasLocation" x="1449" y="-276"/>
         </scene>
         <!--Sales Edge-->
         <scene sceneID="yl2-sM-qoP">
@@ -364,10 +343,10 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="ygn-HJ-6jG" kind="relationship" relationship="viewControllers" id="2HU-IR-cB8"/>
-                        <segue destination="36q-eX-WSN" kind="relationship" relationship="viewControllers" id="kI5-tr-Flu"/>
-                        <segue destination="PRA-hX-b79" kind="relationship" relationship="viewControllers" id="po3-LQ-sUL"/>
-                        <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="eBS-Gb-ZKU"/>
+                        <segue destination="2Ad-aW-YsJ" kind="relationship" relationship="viewControllers" id="7Zh-wm-0Kk"/>
+                        <segue destination="36q-eX-WSN" kind="relationship" relationship="viewControllers" id="X5B-nM-VJM"/>
+                        <segue destination="PRA-hX-b79" kind="relationship" relationship="viewControllers" id="lrZ-vo-sY0"/>
+                        <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="g6v-Vh-Ozx"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -383,10 +362,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MVK-s1-CaT">
-                                <rect key="frame" x="0.0" y="107" width="375" height="510"/>
+                                <rect key="frame" x="0.0" y="63" width="375" height="554"/>
                             </scrollView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="yb3-zG-5Vv" customClass="ButtonBarView" customModule="XLPagerTabStrip">
-                                <rect key="frame" x="0.0" y="64" width="375" height="43"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="43"/>
                                 <color key="backgroundColor" red="0.027450980390000001" green="0.72549019609999998" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="43" id="sDe-LW-W4j"/>
@@ -412,6 +391,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="WR7-GR-5cv"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="My" image="ic_account_box" id="CnK-Fs-iwG"/>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="My" id="42F-K6-9bT"/>
                     <connections>
@@ -421,7 +401,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GYz-Zi-7Ox" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1484" y="-1077"/>
+            <point key="canvasLocation" x="532" y="-998"/>
         </scene>
         <!--MyID View Controller-->
         <scene sceneID="MIg-vc-L5u">
