--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="252" image="app_share_qrcode" translatesAutoresizingMaskIntoConstraints="NO" id="feN-Op-Llv">
-                                <rect key="frame" x="16" y="81" width="343" height="566"/>
+                                <rect key="frame" x="32" y="81" width="311" height="566"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -38,10 +38,10 @@
                             <constraint firstItem="rPA-Yh-qFk" firstAttribute="leading" secondItem="JYK-Zc-UyC" secondAttribute="leading" constant="16" id="7GC-7Q-5QX"/>
                             <constraint firstItem="JYK-Zc-UyC" firstAttribute="bottom" secondItem="feN-Op-Llv" secondAttribute="bottom" constant="20" id="JSr-rn-Whm"/>
                             <constraint firstItem="JYK-Zc-UyC" firstAttribute="trailing" secondItem="rPA-Yh-qFk" secondAttribute="trailing" constant="16" id="SRC-03-0oY"/>
-                            <constraint firstItem="JYK-Zc-UyC" firstAttribute="trailing" secondItem="feN-Op-Llv" secondAttribute="trailing" constant="16" id="VML-nC-UQx"/>
+                            <constraint firstItem="JYK-Zc-UyC" firstAttribute="trailing" secondItem="feN-Op-Llv" secondAttribute="trailing" constant="32" id="VML-nC-UQx"/>
                             <constraint firstItem="rPA-Yh-qFk" firstAttribute="top" secondItem="JYK-Zc-UyC" secondAttribute="top" constant="20" id="elS-Da-h0h"/>
                             <constraint firstItem="feN-Op-Llv" firstAttribute="top" secondItem="rPA-Yh-qFk" secondAttribute="bottom" constant="20" id="fz0-Da-sTg"/>
-                            <constraint firstItem="feN-Op-Llv" firstAttribute="leading" secondItem="JYK-Zc-UyC" secondAttribute="leading" constant="16" id="r6E-ZR-joP"/>
+                            <constraint firstItem="feN-Op-Llv" firstAttribute="leading" secondItem="JYK-Zc-UyC" secondAttribute="leading" constant="32" id="r6E-ZR-joP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="JYK-Zc-UyC"/>
                     </view>
@@ -420,8 +420,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="252" image="app_share_qrcode" translatesAutoresizingMaskIntoConstraints="NO" id="R5O-s3-JsS">
-                                <rect key="frame" x="16" y="110" width="343" height="537"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="252" image="app_share_qrcode" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R5O-s3-JsS">
+                                <rect key="frame" x="32" y="110" width="311" height="537"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -430,8 +430,8 @@
                             <constraint firstItem="ceH-wJ-00J" firstAttribute="top" secondItem="J0I-eo-qnQ" secondAttribute="top" constant="20" id="QVy-u7-5DV"/>
                             <constraint firstItem="ceH-wJ-00J" firstAttribute="leading" secondItem="J0I-eo-qnQ" secondAttribute="leading" constant="16" id="SaQ-V1-iHX"/>
                             <constraint firstItem="J0I-eo-qnQ" firstAttribute="trailing" secondItem="ceH-wJ-00J" secondAttribute="trailing" constant="16" id="UvB-Ks-FoK"/>
-                            <constraint firstItem="J0I-eo-qnQ" firstAttribute="trailing" secondItem="R5O-s3-JsS" secondAttribute="trailing" constant="16" id="ec3-bS-qsY"/>
-                            <constraint firstItem="R5O-s3-JsS" firstAttribute="leading" secondItem="J0I-eo-qnQ" secondAttribute="leading" constant="16" id="o8D-Mb-Jma"/>
+                            <constraint firstItem="J0I-eo-qnQ" firstAttribute="trailing" secondItem="R5O-s3-JsS" secondAttribute="trailing" constant="32" id="ec3-bS-qsY"/>
+                            <constraint firstItem="R5O-s3-JsS" firstAttribute="leading" secondItem="J0I-eo-qnQ" secondAttribute="leading" constant="32" id="o8D-Mb-Jma"/>
                             <constraint firstItem="R5O-s3-JsS" firstAttribute="top" secondItem="ceH-wJ-00J" secondAttribute="bottom" constant="20" id="tE2-Pt-wF9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="J0I-eo-qnQ"/>
@@ -464,7 +464,7 @@
                                 </connections>
                             </textView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_share_qrcode" translatesAutoresizingMaskIntoConstraints="NO" id="pHU-RG-azA">
-                                <rect key="frame" x="16" y="147" width="343" height="500"/>
+                                <rect key="frame" x="32" y="147" width="311" height="500"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="teX-9b-XuL">
                                 <rect key="frame" x="322" y="68.5" width="37" height="30"/>
@@ -479,8 +479,8 @@
                             <constraint firstItem="teX-9b-XuL" firstAttribute="centerY" secondItem="DfU-ea-QaF" secondAttribute="centerY" id="6Sj-hf-9f0"/>
                             <constraint firstItem="DfU-ea-QaF" firstAttribute="top" secondItem="I1n-tE-Mbw" secondAttribute="top" constant="20" id="At9-R5-Tee"/>
                             <constraint firstItem="I1n-tE-Mbw" firstAttribute="bottom" secondItem="pHU-RG-azA" secondAttribute="bottom" constant="20" id="LX0-Kv-fel"/>
-                            <constraint firstItem="pHU-RG-azA" firstAttribute="leading" secondItem="I1n-tE-Mbw" secondAttribute="leading" constant="16" id="PuP-gR-KS4"/>
-                            <constraint firstItem="I1n-tE-Mbw" firstAttribute="trailing" secondItem="pHU-RG-azA" secondAttribute="trailing" constant="16" id="Sv6-Ao-tVq"/>
+                            <constraint firstItem="pHU-RG-azA" firstAttribute="leading" secondItem="I1n-tE-Mbw" secondAttribute="leading" constant="32" id="PuP-gR-KS4"/>
+                            <constraint firstItem="I1n-tE-Mbw" firstAttribute="trailing" secondItem="pHU-RG-azA" secondAttribute="trailing" constant="32" id="Sv6-Ao-tVq"/>
                             <constraint firstItem="I1n-tE-Mbw" firstAttribute="trailing" secondItem="teX-9b-XuL" secondAttribute="trailing" constant="16" id="Tma-Qg-EYd"/>
                             <constraint firstItem="pHU-RG-azA" firstAttribute="top" secondItem="DfU-ea-QaF" secondAttribute="bottom" constant="20" id="XSI-ha-9tA"/>
                             <constraint firstItem="teX-9b-XuL" firstAttribute="leading" secondItem="DfU-ea-QaF" secondAttribute="trailing" constant="8" id="eGV-pD-Pgc"/>
